objects/sbaa__ApprovalRule__c.object
<CustomObject>
    <customHelpPage>sbaa__ApprovalRuleHelp</customHelpPage>
    <description>This is the Rule associated with an Approval.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sbaa__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Rule should be evaluated when submitting for approval</description>
        <inlineHelpText>Checked if Rule should be evaluated when submitting for approval</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__AdvancedCondition__c</fullName>
        <description>Can only be entered if the Conditions Met is Custom. Enter a combination of the Approval Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</description>
        <inlineHelpText>Can only be entered if the Conditions Met is Custom. Enter a combination of the Approval Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</inlineHelpText>
        <label>Advanced Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalChain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval chain to which this rule belongs.</description>
        <inlineHelpText>Approval chain to which this rule belongs.</inlineHelpText>
        <label>Approval Chain</label>
        <referenceTo>sbaa__ApprovalChain__c</referenceTo>
        <relationshipLabel>Approval Rules</relationshipLabel>
        <relationshipName>ApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalRecipients__c</fullName>
        <description>Choose one or more recipients for the approval email notification.</description>
        <inlineHelpText>Choose one or more recipients for the approval email notification.</inlineHelpText>
        <label>Approval Recipients</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Record Owner</fullName>
                </value>
                <value>
                    <fullName>Record Created By</fullName>
                </value>
                <value>
                    <fullName>Initial Submitter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStep__c</fullName>
        <description>Step at which this Approval Rule is evaluated</description>
        <inlineHelpText>Step at which this Approval Rule is evaluated</inlineHelpText>
        <label>Approval Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Email Template associated with approval for this Rule</description>
        <inlineHelpText>Lookup to the Email Template associated with approval for this Rule</inlineHelpText>
        <label>Approval Template</label>
        <referenceTo>sbaa__EmailTemplate__c</referenceTo>
        <relationshipLabel>Approved Approval Rules</relationshipLabel>
        <relationshipName>ApprovedApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ApproverField__c</fullName>
        <description>Used with Dynamic Approvals, the field containing the Approver value used for this Rule</description>
        <inlineHelpText>Used with Dynamic Approvals, the field containing the Approver value used for this Rule</inlineHelpText>
        <label>Approver Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver associated with this Approval Rule.</description>
        <inlineHelpText>Approver associated with this Approval Rule.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Approval Rules</relationshipLabel>
        <relationshipName>ApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ConditionsMet__c</fullName>
        <description>Choose the behavior for your conditions: All is AND; Any is OR.</description>
        <inlineHelpText>Choose the behavior for your conditions: All is AND; Any is OR.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__EffectiveDateField__c</fullName>
        <description>Type of date field from the selected Target Object that Effective Start and End Dates reference when applying Approval Rules</description>
        <inlineHelpText>Type of date field from the selected Target Object that Effective Start and End Dates reference when applying Approval Rules</inlineHelpText>
        <label>Effective Date Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created Date</fullName>
                </value>
                <value>
                    <fullName>Submitted Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__EffectiveEndDate__c</fullName>
        <description>The end date range for when this rule will be in effect (inclusive)</description>
        <inlineHelpText>The end date range for when this rule will be in effect (inclusive)</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sbaa__EffectiveStartDate__c</fullName>
        <description>The start date for when this rule will be in effect (inclusive)</description>
        <inlineHelpText>The start date for when this rule will be in effect (inclusive)</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sbaa__ExcludedStatuses__c</fullName>
        <description>Statuses that this Approval Rule should not be applied to</description>
        <inlineHelpText>Statuses that this Approval Rule should not be applied to</inlineHelpText>
        <label>Excluded Statuses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__OverrideField__c</fullName>
        <description>If set, the value of this field overrides the Approval Conditions</description>
        <inlineHelpText>If set, the value of this field overrides the Approval Conditions</inlineHelpText>
        <label>Override Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__Parallel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all approvals at the step happen in parallel. This setting only has an effect when using Advanced Approvals with native approvals.</description>
        <inlineHelpText>If checked, all approvals at the step happen in parallel. This setting only has an effect when using Advanced Approvals with native approvals.</inlineHelpText>
        <label>Parallel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__RecallTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Email Template associated with recalls for this Rule</description>
        <inlineHelpText>Lookup to the Email Template associated with recalls for this Rule</inlineHelpText>
        <label>Recall Template</label>
        <referenceTo>sbaa__EmailTemplate__c</referenceTo>
        <relationshipLabel>Recalled Approval Rules</relationshipLabel>
        <relationshipName>RecalledApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__RejectionRecipients__c</fullName>
        <description>Choose one or more recipients for the rejection email notification.</description>
        <inlineHelpText>Choose one or more recipients for the rejection email notification.</inlineHelpText>
        <label>Rejection Recipients</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Record Owner</fullName>
                </value>
                <value>
                    <fullName>Record Created By</fullName>
                </value>
                <value>
                    <fullName>Initial Submitter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__RejectionTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Email Template associated with rejection for this Rule</description>
        <inlineHelpText>Lookup to the Email Template associated with rejection for this Rule</inlineHelpText>
        <label>Rejection Template</label>
        <referenceTo>sbaa__EmailTemplate__c</referenceTo>
        <relationshipLabel>Rejected Approval Rules</relationshipLabel>
        <relationshipName>RejectedApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__RequestTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Email Template associated with approval requests for this Rule</description>
        <inlineHelpText>Lookup to the Email Template associated with approval requests for this Rule</inlineHelpText>
        <label>Request Template</label>
        <referenceTo>sbaa__EmailTemplate__c</referenceTo>
        <relationshipLabel>Approval Rules (Requested)</relationshipLabel>
        <relationshipName>RequestedApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__RequireExplicitApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default, approving any Approval will auto-approve all other Approvals assigned to the same User. If this box is checked, an Approval originated by this Rule will not be auto-approved and must be explicitly approved.</description>
        <inlineHelpText>By default, approving any Approval will auto-approve all other Approvals assigned to the same User. If this box is checked, an Approval originated by this Rule will not be auto-approved and must be explicitly approved.</inlineHelpText>
        <label>Require Explicit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__SmartApprovalIgnoresConditionsMet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will cause this Approval Rule to reevaluate Smart Approval conditions even if Conditions Met is set to All or Custom. If any Smart Approval Condition returns True upon reevaluation, the reevaluation is stopped and the Rule Conditions are considered met.</description>
        <inlineHelpText>Check to reevaluate Smart Approval conditions even if Conditions Met is set to All or Custom. If any Smart Approval Condition returns True, the reevaluation stops and Rule Conditions are considered met.</inlineHelpText>
        <label>Reevaluate Smart Approvals Individually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__TargetObject__c</fullName>
        <description>API Name of the object to which this Rule applies</description>
        <inlineHelpText>API Name of the object to which this Rule applies</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approval Rule</label>
    <listViews>
        <fullName>sbaa__ActiveRules</fullName>
        <columns>NAME</columns>
        <columns>sbaa__Active__c</columns>
        <columns>sbaa__ConditionsMet__c</columns>
        <columns>sbaa__ApprovalStep__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sbaa__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Rules</label>
    </listViews>
    <listViews>
        <fullName>sbaa__All</fullName>
        <columns>NAME</columns>
        <columns>sbaa__Active__c</columns>
        <columns>sbaa__ConditionsMet__c</columns>
        <columns>sbaa__ApprovalStep__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sbaa__Effective_Date_Not_Null</fullName>
        <active>true</active>
        <description>If Start and/or End Effective Dates are set, Effective Date Field must not be blank.</description>
        <errorConditionFormula>IF(OR(!ISBLANK(sbaa__EffectiveStartDate__c), (!ISBLANK(sbaa__EffectiveEndDate__c))),ISBLANK(TEXT(sbaa__EffectiveDateField__c)),false)</errorConditionFormula>
        <errorMessage>Effective Date Field must be set in order to use Effective Start and End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sbaa__Effective_Date_Range_Ordered</fullName>
        <active>true</active>
        <description>Effective End Date must not come before Effective Start Date.</description>
        <errorConditionFormula>sbaa__EffectiveStartDate__c&gt;sbaa__EffectiveEndDate__c</errorConditionFormula>
        <errorMessage>Effective End Date must not come before Effective Start Date.</errorMessage>
    </validationRules>
</CustomObject>